--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </main>
     </div>
 
+    <audio id="bgm" src="audio/madobe.mp3" loop></audio>
     <script src="script.js"></script>
 </body>
 </html>
