feat: show color gods

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <button id="mixButton" disabled>混色実験開始！</button>
             </section>
 
+            <section class="god-display" id="godDisplay" style="display: none;">
+                <h2 id="godName"></h2>
+            </section>
+
             <section class="result-area" id="resultArea" style="display: none;">
                 <h2>新しい精霊が生まれました！</h2>
                 <div class="new-spirit">
